ho fatto un po di modifiche da entrambe le parti ma non funziona un cazzzzzzzzzo